# teach-me-wow

./: .gitignore  README.md
apps/agent/: pyproject.toml
apps/common/: embedding_config.py  llm_config.py  settings.py
apps/etl/: config.py  extracting_skills.ipynb
apps/etl/data/: kg_checkpoint.json  wow_talents_data.json
apps/etl/etl_utils/: blizz_utils.py
apps/front/: package-lock.json  package.json
apps/front/src/app/: globals.css  page.tsx
apps/front/src/app/[classSlug]/: page.tsx
apps/front/src/app/[classSlug]/[specSlug]/: SpecializationChatPageContent.tsx  page.tsx
apps/front/src/components/: .gitkeep  ChatInterface.tsx  ClassCard.tsx  SpecCard.tsx
apps/front/src/data/: classes.ts
apps/knowledge_graph/: README.md  neo4j.sh  pyproject.toml
apps/knowledge_graph/src/: graph_builder.py  graph_structure_prompt.py
apps/teacher_agent/: pyproject.toml
apps/teacher_agent/agent/: agent_graph.py  agent_nodes.py  agent_state.py  agent_streaming.py  agent_toolbox.py  testing_agent.ipynb
apps/teacher_agent/agent/prompts/: assistant_prompt.py
apps/teacher_agent/api/: main.py
apps/teacher_agent/api/core/: config.py
apps/teacher_agent/api/db/: database.py
apps/teacher_agent/api/routers/: agent_router.py
apps/teacher_agent/api/schemas/: chat_schemas.py
apps/teacher_agent/pinecone/: index_settings.py  pinecone_index.py
apps/teacher_agent/pinecone/ingestion/: scrape_wowhead.py  wowhead_scrapping.ipynb
apps/teacher_agent/pinecone/retrieval/: retriever.py
