[project]
name = "teacher-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "langchain-openai>=0.3.16",
    "langchain-pinecone>=0.2.6",
    "langgraph>=0.4.2",
    "lxml[html-clean]>=5.4.0",
    "pinecone[grpc]>=6.0.2",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "requests-html>=0.10.0",
    "tdqm>=0.0.1",
    "tqdm>=4.67.1",
    "unstructured>=0.17.2",
    "websockets==9.1",
]
